--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,52 @@
-
-upstream cache-api {
-   least_conn;
-   server 10.32.18.6:8080 max_fails=2 fail_timeout=10s;
-   server 10.32.18.7:8080 max_fails=2 fail_timeout=10s;
-   server 10.32.18.8:8080 max_fails=2 fail_timeout=10s;
-}
-
-location / {
-    proxy_pass http://cache-api/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Real-IP $remote_addr;
-}
-
-
 worker_processes  4;
-events {}
+
+events {
+# максимум рабочих соединений
+worker_connections 1024;
+}
+
+
+
+
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+
+    # Подключаем таблицу mime
+    include mime.types;
+    # mime-тип по умолчанию
+    default_type application/octet-stream;
+    client_header_timeout 3m;
+    client_body_timeout 3m;
+    send_timeout 3m;
+    sendfile on;
+
+    upstream web {
+               least_conn;
+               server 18.220.121.142:8080 ;
+               server 18.217.118.218:8080 ;
+               server 3.15.191.183:8080 ;
+           }
 
 
-    sendfile        on;
 
     server {
+
+
         listen       80;
         server_name  localhost;
-        root /etc/nginx/static;
 
 
-	}
+        location / {
+                   proxy_pass http://web;
+                   proxy_set_header Host $host;
+                   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                   proxy_set_header X-Real-IP $remote_addr;
+               }
 
 
+    	}
 
 
 }
+
 
