--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 worker_processes  4;
 
 events {
-# максимум рабочих соединений
+
 worker_connections 1024;
 }
 
@@ -11,9 +11,8 @@ worker_connections 1024;
 
 http {
 
-    # Подключаем таблицу mime
     include mime.types;
-    # mime-тип по умолчанию
+
     default_type application/octet-stream;
     client_header_timeout 3m;
     client_body_timeout 3m;
@@ -22,11 +21,13 @@ http {
 
     upstream web {
                least_conn;
-               server 18.220.121.142:8080 ;
-               server 18.217.118.218:8080 ;
-               server 3.15.191.183:8080 ;
+               server 18.220.121.142:8080 max_fails=2 fail_timeout=10s;
+               server 18.217.118.218:8080 max_fails=2 fail_timeout=10s;
+               server 3.15.191.183:8080 max_fails=2 fail_timeout=10s;
            }
 
+
+### ngx_http_upstream_hc_module платно
 
 
     server {
@@ -41,6 +42,9 @@ http {
                    proxy_set_header Host $host;
                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                    proxy_set_header X-Real-IP $remote_addr;
+                   proxy_connect_timeout 3s;
+                   proxy_read_timeout 10;
+
                }
 
 
